--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,11 +5,13 @@
   .col-lg-8.col-md-12.col-sm-12.col-xs-12{style: "margin-bottom:10px"}
     %div#cars_index{ :style => "width: 100%; height: 400px;"}
   .col-lg-4.col-md-12.col-sm-12.col-xs-12
-    .tiles.white
-      .tiles-body
-        .tiles-title
-          Vehicles
-        %br/
+    .grid.simple
+      .grid-title
+        %h4
+          Vehicles 
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-body 
         - @positions.each do |position|
           .notification-messages.info
             .message-wrapper
@@ -17,6 +19,7 @@
               .description= position.try(:location).try(:address)
               .date.pull-left= "Last seen : #{time_ago_in_words(position.time)} ago"
             .clearfix
+          
 
 
 
