--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -44,6 +44,12 @@
               .col-lg-2.col-md-12.col-sm-12.col-xs-12
                 = submit_tag 'Apply', :class => "btn btn-default btn-primary"
 
+
+  .row
+    .col-md-12
+      - if @positions.nil? || @positions.count == 0
+        %p.alert.alert-notice
+          No positions available for this period. Select another start/end date.
   .row
     .col-md-8{style:"margin-bottom:10px"}
       %div#cars_show{ :style => "width: 100%; height: 640px;"}
