Implemented + Refactored rspec tets

--- a/app/views/cars/index.html.haml
+++ b/app/views/cars/index.html.haml
@@ -3,11 +3,12 @@
     .col-md-8.col-lg-8.col-sm-8.col-xs-8 
       .page-title
         %h3
-          Vehicles List
+          Vehicles
     .col-md-4.col-lg-4.col-sm-4.col-xs-4 
       .pull-right
+        = link_to 'Filter', "#", class: "btn btn-default toggle"
         = link_to 'Create', new_car_path, class: "btn btn-success"
-        = link_to 'Toggle Filters', "#", class: "btn btn-default toggle"
+        
 
   
   .row.to-be-toggled
@@ -58,7 +59,7 @@
                       = "Without driver"
         .row
           .col-md-12
-            .pull-right= submit_tag 'Apply Filters', :class => "btn btn-default"
+            .pull-right= submit_tag 'Apply Filters', :class => "btn btn-primary"
   
   %br/
 
