--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -21,4 +21,4 @@
     = f.text_field :email, :class => "form-control"
 
   .form-group
-    = f.submit "Update User", class: "btn btn-primary"
+    = f.submit "Submit", class: "btn btn-primary"
