--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -167,24 +167,24 @@
             - @alarms.each do |alarm| 
               %p
                 = alarm.name
-  / - if current_user.has_role?(:admin)
-  /   .row
-  /     .col-md-12
-  /       .grid.simple.horizontal.green 
-  /         .grid-title
-  /           %h4 Simulate
-  /           .tools
-  /             %a.collapse{href: "javascript:;"}
-  /         .grid-body
-  /           .form-group
-  /             = button_to "Movement Alarm", movement_simulations_path(car_id: @car.id), class: "btn"
-  /           .form-group
-  /             = button_to "Speed Alarm", speeding_simulations_path(car_id: @car.id), class: "btn"
-  /           .form-group
-  /             = button_to "Long Pause Alarm", long_pause_simulations_path(car_id: @car.id), class: "btn"
-  /           .form-group
-  /             = button_to "Long Drive Alarm", long_driving_simulations_path(car_id: @car.id), class: "btn"
-  /           .form-group
-  /             = button_to "Entered Area Alarm", enter_area_simulations_path(car_id: @car.id), class: "btn"
-  /           .form-group
-  /             = button_to "Left Area Alarm", left_area_simulations_path(car_id: @car.id), class: "btn"
+  - if current_user.has_role?(:admin)
+    .row
+      .col-md-12
+        .grid.simple.horizontal.green 
+          .grid-title
+            %h4 Simulate
+            .tools
+              %a.collapse{href: "javascript:;"}
+          .grid-body
+            .form-group
+              = button_to "Detect Movement Alarm", movement_simulations_path(car_id: @car.id), class: "btn"
+            .form-group
+              = button_to "Speed limit Alarm", speeding_simulations_path(car_id: @car.id), class: "btn"
+            .form-group
+              = button_to "Long Pause Alarm", long_pause_simulations_path(car_id: @car.id), class: "btn"
+            .form-group
+              = button_to "Long Drive Alarm", long_driving_simulations_path(car_id: @car.id), class: "btn"
+            .form-group
+              = button_to "Entered Area Alarm", enter_area_simulations_path(car_id: @car.id), class: "btn"
+            .form-group
+              = button_to "Left Area Alarm", left_area_simulations_path(car_id: @car.id), class: "btn"
