--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,9 +3,9 @@
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), users_path
       %h3
-        User  
+        User profile
   .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-    .pull-right= link_to 'Edit', edit_user_path(@user), class: "btn btn-success"
+    .pull-right= link_to 'Update', edit_user_path(@user), class: "btn btn-primary"
 
 
 .row
