--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -1,6 +1,6 @@
 .page-title
   %h3
-    Alarms Notifications
+    Alerts
 
 .row
   .col-md-12
@@ -14,7 +14,7 @@
                   %tr
                     %th
                     %th Vehicle
-                    %th Alarm
+                    %th Alarm triggered
                     %th Triggered at
                 %tbody           
                   - @alarm_notifications.each do |alarm_notification|
