--- a/app/views/device_models/index.html.haml
+++ b/app/views/device_models/index.html.haml
@@ -3,7 +3,7 @@
     .col-md-8.col-lg-8.col-sm-8.col-xs-8 
       .page-title
         %h3
-          Device Models List  
+          Device Models  
     .col-md-4.col-lg-4.col-sm-4.col-xs-4 
       .pull-right= link_to 'Create', new_device_model_path, class: "btn btn-success"
 
