--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,7 +8,7 @@
     .grid.simple
       .grid-title
         %h4
-          Vehicles 
+          = "Vehicles (#{Car.count})" 
         .tools
           %a.collapse{href: "javascript:;"}
       .grid-body 
