--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -111,88 +111,7 @@
           / BEGIN SIDEBAR MENU
           %p.menu-title
             ADMINISTRATION
-          %ul
-            / BEGIN SELECTED LINK
-            %li
-              %a{:href => root_path}
-                = fa_icon "home"
-                %span.title Home
-            / BEGIN SELECTED LINK
-            %li
-              %a{:href => cars_path}
-                = fa_icon "truck"
-                %span.title Vehicles
-            %li
-              %a{:href => devices_path}
-                = fa_icon "bullseye"
-                %span.title Devices
-            %li
-              %a{:href => simcards_path}
-                = fa_icon "ticket"
-                %span.title Simcards
-            %li
-              %a{:href => groups_path}
-                = fa_icon "sitemap"
-                %span.title Alarm Groups
-            %li
-              %a{:href => work_schedule_groups_path}
-                = fa_icon "sitemap"
-                %span.title Work Schedule Groups
-            %li
-              %a{:href => users_path}
-                = fa_icon "users"
-                %span.title Employees
-            %li
-              %a{:href => regions_path}
-                = fa_icon "circle"
-                %span.title Regions
-            %li
-              %a{:href => work_schedules_path}
-                = fa_icon "calendar"
-                %span.title Work Schedules
-            %li
-              %a{:href => alarms_path}
-                = fa_icon "bullhorn"
-                %span.title Alarms
-            %li
-              %a{:href => alarm_notifications_path}
-                = fa_icon "exclamation-triangle"
-                %span.title Notifications
-            - if current_user && current_user.has_role?(:admin)
-              / BEGIN TWO LEVEL MENU
-              %li
-                %a{:href => "javascript:;"}
-                  = fa_icon "gears"
-                  %span.title Advanced
-                  %span.arrow
-                %ul.sub-menu
-                  %li= link_to "Companies", companies_path
-                  %li
-                    %a{:href => "javascript:;"}
-                      %span.title Cars
-                      %span.arrow
-                    %ul.sub-menu
-                      %li= link_to "Car Manufacturers", car_manufacturers_path
-                      %li= link_to "Car Models", car_models_path
-                      %li= link_to "Car Types", car_types_path
-                  %li
-                    %a{:href => "javascript:;"}
-                      %span.title Devices
-                      %span.arrow
-                    %ul.sub-menu
-                      %li= link_to "Device Manufacturers", device_manufacturers_path
-                      %li= link_to "Device Models", device_models_path
-                      %li= link_to "Device Types", device_types_path
-                      %li= link_to "Teleproviders", teleproviders_path
-                  %li= link_to "Rules", rules_path
-                  %li
-                    %a{:href => "javascript:;"}
-                      %span.title Billing/Plans
-                      %span.arrow
-                    %ul.sub-menu
-                      %li= link_to "Plans", plans_path
-                      %li= link_to "Plan types", plan_types_path
-                      %li= link_to "Features", features_path
+            = render "layouts/menu"
             / END TWO LEVEL MENU
           / END SIDEBAR MENU
       / BEGIN SCROLL UP HOVER
