--- a/app/views/work_schedules/index.html.haml
+++ b/app/views/work_schedules/index.html.haml
@@ -3,7 +3,7 @@
     .col-md-6
       .page-title
         %h3
-          Work schedules List 
+          Work schedules 
     .col-md-6
       .pull-right= link_to 'Create', new_work_schedule_path, class: "btn btn-success"
 
