--- a/app/views/plan_types/index.html.haml
+++ b/app/views/plan_types/index.html.haml
@@ -2,7 +2,7 @@
   .col-md-8.col-lg-8.col-sm-8.col-xs-8 
     .page-title
       %h3
-        Plan Types List 
+        Plan Types 
   .col-md-4.col-lg-4.col-sm-4.col-xs-4 
     .pull-right= link_to 'Create', new_plan_type_path, class: "btn btn-success"
 
