--- a/app/views/work_schedule_groups/index.html.haml
+++ b/app/views/work_schedule_groups/index.html.haml
@@ -3,7 +3,7 @@
     .col-md-6
       .page-title
         %h3
-          Work schedule groups List 
+          Work schedule groups 
     .col-md-6
       .pull-right= link_to 'Create', new_work_schedule_group_path, class: "btn btn-success"
 
