Renamed alarm notifications path to alerts

--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -7,7 +7,9 @@
   %li
     %a{:href => alarm_notifications_path}
       = fa_icon "exclamation-triangle"
-      %span.title Alerts
+      %span.title 
+        Alerts 
+        = "(0)"
   %li
     %a{:href => cars_path}
       = fa_icon "truck"
