--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -17,12 +17,12 @@
                     %th Alarm triggered
                     %th Triggered at
                 %tbody           
-                  - @alarm_notifications.each do |alarm_notification|
+                  - @alerts.each do |alert|
                     %tr
-                      %td.small-cell.v-align-middle= check_box_tag "alarm_notification_ids[]", alarm_notification.id, nil , class: "alarm_notification_checkbox"
-                      %td= link_to alarm_notification.try(:car).try(:name), alarm_notification.car
-                      %td= link_to alarm_notification.try(:alarm).try(:name), alarm_notification.alarm
-                      %td= alarm_notification.created_at
+                      %td.small-cell.v-align-middle= check_box_tag "alarm_notification_ids[]", alert.id, nil , class: "alarm_notification_checkbox"
+                      %td= link_to alert.try(:car).try(:name), alert.car
+                      %td= link_to alert.try(:alarm).try(:name), alert.alarm
+                      %td= alert.created_at
 
 
 #quick-access.admin-bar{:style => "bottom: -115px;"}
